@@ -1,0 +1,1 @@
+zhaojian ,zhaojian,ubuntu.ubuntu-domain,06.07.2013 18:43,file:///home/zhaojian/.openoffice.org/3;
