@@ -1,0 +1,60 @@
+{
+	"experimentName": "searching",
+	"experiments": [
+		{
+			"type": "1d",
+			"numOfItems": 1,
+			"numOfTasks": 3,
+			"numOfCols": 1,
+			"numOfRows": 1,
+			"tasks": [
+				{
+					"time": 3000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}, {
+					"time": 2000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}, {
+					"time": 1000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}
+			]
+		}, {
+			"type": "2d",
+			"numOfItems": 1,
+			"numOfTasks": 3,
+			"numOfCols": 1,
+			"numOfRows": 1,
+			"tasks": [
+				{
+					"time": 3000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}, {
+					"time": 2000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}, {
+					"time": 1000,
+					"questionTypes": [3],
+					"numOfTests": 9,
+					"tests": ["question_3", "question_3", "question_3", "question_3", 
+							"question_3", "question_3", "question_3", "question_3", "question_3"]
+				}
+			]
+		}
+	]
+}
