@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta name="viewport" charset="utf-8" content="width=device-width, minimum-scale=1, maximum-scale=1" />
+        <meta charset="utf-8" />
         <title>index</title>
         <script type="text/javascript" src="js/jquery.js"></script>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -13,11 +13,49 @@
                 <p>欢迎来到我们的测试平台，本平台将测试一维列表和二维列表的辨识度差别。</p>
 				<p>您将会看到不同的一维或二维列表，每个列表出现的时间都是固定的，请抓紧时间观察每个列表，并回答之后出现的问题。</p>
 				<p>当您准备好进行测试之后，请点击按钮从下面的素材当中选择一种并进入实验</p>
+                <!-- <button id="start">开始测试</button> -->
                 <button id="number">数字</button>
                 <button id="letter">字母</button>
                 <button id="shape">图形</button>
                 <p class="ps">PS: 每一次选择结束后系统会给出题目的答案，如果所选的选项错误则显示为<span class="red">红色</span>，同时将正确选项显示为<span class="green">绿色</span>。</p>
             </div>
+            <!-- <div id="subjects">
+                <h1>温馨提醒</h1>
+                <p>以下是本次实验中要用到的所有素材，请在进行实验之前尽可能地熟悉它们</p>
+                <div id="subject-images">
+                    <img src="files/shape/banyuanxing.jpg" width=60 height=60 />
+                    <img src="files/shape/changfangxing.jpg" width=60 height=60 />
+                    <img src="files/shape/leidian.jpg" width=60 height=60 />
+                    <img src="files/shape/lingxing.jpg" width=60 height=60 />
+                    <img src="files/shape/liubianxing.jpg" width=60 height=60 />
+                    <img src="files/shape/liujiaoxing.jpg" width=60 height=60 />
+                    <img src="files/shape/sanjiaoxing.jpg" width=60 height=60 />
+                    <img src="files/shape/shangjiantou.jpg" width=60 height=60 />
+                    <img src="files/shape/sijiaoxing.jpg" width=60 height=60 />
+                    <img src="files/shape/tuoyuanxing.jpg" width=60 height=60 />
+                    <img src="files/shape/wujiaoxing.jpg" width=60 height=60 />
+                    <img src="files/shape/wubianxing.jpg" width=60 height=60 />
+                </div>
+                <p>在确认已经熟悉所有素材之后，请点击下面的按钮开始实验</p>
+                <button id="start">开始测试</button>
+            </div> -->
+
+<!--             <div id="ending">
+                <h1>测试结束，感谢您的支持与配合！^-^</h1>
+				<p>您最终的得分为：<span id="score" class="green">100</span> 分</p>
+            </div> -->
+
+           <!--  <div id="prompting">
+                <h1>温馨提醒</h1>
+                <p>接下来您将进入试验<span id="experimentId">一</span>的第<span id="taskId">一</span>轮测试，该轮测试的难度为<span id="difficulty" class="blue">简单</span></p>
+                <p>本轮测试中的题型如下：</p>
+                <ol>
+                    <li>下面出现的列表是否与原列表相同？</li>
+                </ol>
+                <p>其中每道题目出现的时间为<span id="time" class="purple">4000毫秒</span></p>
+                <p>当您准备好进行测试之后，请点击下面的按钮开始</p>
+                <button id="next">继续测试</button>
+            </div> -->
         </div>
     </body>
 
